--- a/Group Exploration/Henry's Exploration/Web Draft/style.css
+++ b/Group Exploration/Henry's Exploration/Web Draft/style.css
@@ -192,3 +192,49 @@ h1, h2, h3, h4, h5 {
   box-shadow: 0px 13px 30px -15px #000;
   transform: translateY(-10px);
 }
+
+/* rules */
+/* .rules-container {
+  max-width: 600px;
+  margin: 20px auto;
+  padding: 20px;
+  border-radius: 15px;
+  background: #fff;
+  box-shadow: 0px 5px 20px -10px #000;
+}
+
+.rules-container h2 {
+  color: #333;
+  text-align: center;
+  font-weight: bold;
+  border-bottom: 3px solid #000000;
+  margin-bottom: 15px;
+}
+
+.rules-container p {
+  color: #555;
+} */
+
+.rules-container {
+  max-width: 800px;
+  border-radius: 15px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+}
+
+.rule-section {
+  margin-bottom: 20px;
+}
+
+h2 {
+  color: #333;
+  text-align: center;
+  border-bottom: 3px solid #000000;
+  margin-bottom: 15px;
+}
+
+p {
+  line-height: 1.5;
+}
