--- a/Group Exploration/Henry's Exploration/Web Draft/style.css
+++ b/Group Exploration/Henry's Exploration/Web Draft/style.css
@@ -194,26 +194,6 @@ h1, h2, h3, h4, h5 {
 }
 
 /* rules */
-/* .rules-container {
-  max-width: 600px;
-  margin: 20px auto;
-  padding: 20px;
-  border-radius: 15px;
-  background: #fff;
-  box-shadow: 0px 5px 20px -10px #000;
-}
-
-.rules-container h2 {
-  color: #333;
-  text-align: center;
-  font-weight: bold;
-  border-bottom: 3px solid #000000;
-  margin-bottom: 15px;
-}
-
-.rules-container p {
-  color: #555;
-} */
 
 .rules-container {
   max-width: 800px;
@@ -222,6 +202,7 @@ h1, h2, h3, h4, h5 {
   padding: 20px;
   background-color: #fff;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  border: 3px solid black;
 }
 
 .rule-section {
