--- a/Group Exploration/Henry's Exploration/Web Draft/style.css
+++ b/Group Exploration/Henry's Exploration/Web Draft/style.css
@@ -17,6 +17,7 @@ body.bg-docs{
   background-color: blanchedalmond;
   font-family: "Open Sans", Helvetica, sans-serif;
   text-align: center;
+  flex: 1;
 }
 
 img {
@@ -218,4 +219,70 @@ h2 {
 
 p {
   line-height: 1.5;
+}
+
+/* Card Menu */
+
+.flex-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.menu-box {
+  background-color: #f2e6cb; /* Adjusted background color */
+  padding: 2rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.title {
+  font-size: 1.875rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.subtitle {
+  color: #4b5563;
+}
+
+.buttons-container {
+  margin-top: 2rem;
+}
+
+.red-team-button,
+.black-team-button,
+.green-team-button,
+.white-team-button {
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+  margin-right: 1rem;
+  cursor: pointer;
+}
+
+.red-team-button {
+  background-color: #fd0000;
+  color: white;
+}
+
+.black-team-button {
+  background-color: #000;
+  color: white;
+}
+
+.green-team-button {
+  background-color: #008000;
+  color: white;
+}
+
+.white-team-button {
+  background-color: #fff;
+  color: #000;
 }
