--- a/Group Exploration/Henry's Exploration/Web/client/src/index.css
+++ b/Group Exploration/Henry's Exploration/Web/client/src/index.css
@@ -14,7 +14,7 @@ body{
 /* https://codepen.io/csb324/pen/MXVaLj */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300,700');
 
-body.bg-docs{
+.bg-docs{
   background-color: blanchedalmond;
   font-family: "Open Sans", Helvetica, sans-serif;
   text-align: center;
@@ -30,6 +30,12 @@ img {
 h1, h2, h3, h4, h5 {
   margin: 0;
   font-weight: 400;
+}
+
+#cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .card {
