--- a/Group Exploration/Henry's Exploration/Web/client/src/index.css
+++ b/Group Exploration/Henry's Exploration/Web/client/src/index.css
@@ -6,7 +6,7 @@
 }
 
 body{
-  background-color: blanchedalmond !important;
+  background-color: #CCCCCC !important;
   height: 100vh;
 }
 
@@ -240,14 +240,18 @@ p {
 }
 
 .menu-box {
-  background-color: #f2e6cb; /* Adjusted background color */
+  background-color: #666666;
   padding: 2rem;
   border-radius: 0.5rem;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 16px 32px rgba(0, 0, 0, 0.2); 
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+}
+
+.menu-box:hover {
+  box-shadow: 0 24px 40px rgba(0, 0, 0, 0.3); 
 }
 
 .title {
