--- a/Group Exploration/Henry's Exploration/Web/client/src/index.css
+++ b/Group Exploration/Henry's Exploration/Web/client/src/index.css
@@ -134,7 +134,7 @@ h1, h2, h3, h4, h5 {
 }
 
 .card--red {
-  background: linear-gradient(120deg, #ff0000 0%, #800000 100%);
+  background: linear-gradient(120deg, #f23a3a 0%, #360101 100%);
   box-shadow: 0px 5px 20px -10px #800000;
 }
 
